Fix for  bug 69285 "Mozilla is unresponsive after sleep", patch=sfraser, gordon, r=wtc.