nsprpub/pr/src/md/mac/macsockotpt.c
@@ -74,6 +74,9 @@ static pascal void  RawEndpointNotifierRoutine(void * contextPtr, OTEventCode co
 
 static PRBool GetState(PRFileDesc *fd, PRBool *readReady, PRBool *writeReady, PRBool *exceptReady);
 
+void
+WakeUpNotifiedThread(PRThread *thread, OTResult result);
+
 extern void WaitOnThisThread(PRThread *thread, PRIntervalTime timeout);
 extern void DoneWaitingOnThisThread(PRThread *thread);
 
@@ -283,7 +286,7 @@ static void PrepareForAsyncCompletion(PRThread * thread, PRInt32 osfd)
 }
 
 
-static void
+void
 WakeUpNotifiedThread(PRThread *thread, OTResult result)
 {
     _PRCPU *      cpu      = _PR_MD_CURRENT_CPU(); 
@@ -1739,37 +1742,39 @@ static PRInt32 CheckPollDescs(PRPollDesc *pds, PRIntn npds)
 
                 pd->out_flags = 0;  /* pre-condition */
                 bottomFD = PR_GetIdentitiesLayer(pd->fd, PR_NSPR_IO_LAYER);
-                PR_ASSERT(NULL != bottomFD);
-                	
-            if (bottomFD && (_PR_FILEDESC_OPEN == bottomFD->secret->state))
-            {
-                    if (GetState(bottomFD, &readReady, &writeReady, &exceptReady))
-                    {
-                        if (readReady)
-                        {
-                            if (in_flags_read & PR_POLL_READ)
-                                pd->out_flags |= PR_POLL_READ;
-                            if (in_flags_write & PR_POLL_READ)
-                                pd->out_flags |= PR_POLL_WRITE;
-                        }
-                        if (writeReady)
-                        {
-                            if (in_flags_read & PR_POLL_WRITE)
-                                pd->out_flags |= PR_POLL_READ;
-                            if (in_flags_write & PR_POLL_WRITE)
-                                pd->out_flags |= PR_POLL_WRITE;
-                        }
-                        if (exceptReady && (pd->in_flags & PR_POLL_EXCEPT))
-                        {
-                            pd->out_flags |= PR_POLL_EXCEPT;
-                        }
-                        if (0 != pd->out_flags) ready++;
-                    }
-                }
-            else    /* bad state */
+                /* bottomFD can be NULL for pollable sockets */
+                if (bottomFD)
                 {
-                    ready += 1;  /* this will cause an abrupt return */
-                    pd->out_flags = PR_POLL_NVAL;  /* bogii */
+                    if (_PR_FILEDESC_OPEN == bottomFD->secret->state)
+                    {
+                        if (GetState(bottomFD, &readReady, &writeReady, &exceptReady))
+                        {
+                            if (readReady)
+                            {
+                                if (in_flags_read & PR_POLL_READ)
+                                    pd->out_flags |= PR_POLL_READ;
+                                if (in_flags_write & PR_POLL_READ)
+                                    pd->out_flags |= PR_POLL_WRITE;
+                            }
+                            if (writeReady)
+                            {
+                                if (in_flags_read & PR_POLL_WRITE)
+                                    pd->out_flags |= PR_POLL_READ;
+                                if (in_flags_write & PR_POLL_WRITE)
+                                    pd->out_flags |= PR_POLL_WRITE;
+                            }
+                            if (exceptReady && (pd->in_flags & PR_POLL_EXCEPT))
+                            {
+                                pd->out_flags |= PR_POLL_EXCEPT;
+                            }
+                            if (0 != pd->out_flags) ready++;
+                        }
+                    }
+                    else    /* bad state */
+                    {
+                        ready += 1;  /* this will cause an abrupt return */
+                        pd->out_flags = PR_POLL_NVAL;  /* bogii */
+                    }
                 }
             }
         }
@@ -1788,7 +1793,6 @@ static void SetDescPollThread(PRPollDesc *pds, PRIntn npds, PRThread* thread)
         if (pd->fd)
         { 
             PRFileDesc *bottomFD = PR_GetIdentitiesLayer(pd->fd, PR_NSPR_IO_LAYER);
-            PR_ASSERT(NULL != bottomFD);
             if (bottomFD && (_PR_FILEDESC_OPEN == bottomFD->secret->state))
             {
                 bottomFD->secret->md.poll.thread = thread;
